# consilium

./: .env.example  .gitignore  Consilium.pyw  README.md  launcher.py  pyproject.toml  setup-launcher.bat  start.bat
backend/: __init__.py  config.py  main.py
backend/api/: answers.py  deliberate.py  output.py  routes.py  scenario.py
backend/experts/: __init__.py  base.py
backend/experts/consilium/: __init__.py  armorer.py  chronicler.py  commander.py  geographer.py  herald.py  logistician.py  strategist.py  surgeon.py  tactician.py
backend/experts/redteam/: __init__.py  adversary.py  auditor.py  dramatist.py  realist.py  skeptic.py
backend/lib/: __init__.py  consistency.py  defaults.py  exceptions.py  llm.py  models.py  persistence.py  streaming.py  utils.py
backend/moderator/: __init__.py  certify.py  consistency.py  delta.py  filter.py  moderator.py  synthesis.py
backend/orchestrator/: __init__.py  chambers.py  engine.py  interrogation.py  round.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/session/[id]/: page.tsx
frontend/src/app/session/[id]/deliberation/: page.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  switch.tsx  tabs.tsx  textarea.tsx
frontend/src/hooks/: useDeliberation.ts
frontend/src/lib/: api.ts  types.ts
tests/: output_453ea4ce.json  output_5c7c8a22.json  test_full_flow.py  test_phase3_dry.py
(+1 files in other folders)
